--- a/templates/tithings/tithings.html
+++ b/templates/tithings/tithings.html
@@ -4,16 +4,16 @@
 
 {% block content %}
 <div class="table-card">
-    <div class="row py-3 px-2">
+    <div class="row py-3 px-4">
         <div class="col">
-            <h3>Members Tithes</h3>
+            <h3 class="fw-bold">Members Tithes</h3>
         </div>
         <div class="col">
             <input type="text" class="form-control" placeholder="Search..." 
             id="searchInput" value="{{ search_query }}">
         </div>
         <div class="col">
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newTitheModal">Record Tithe</button>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newTitheModal">Record Member Tithe</button>
           </div>
     </div>
  
