--- a/templates/districts/pastors/edit_pastor_associate.html
+++ b/templates/districts/pastors/edit_pastor_associate.html
@@ -66,7 +66,7 @@
                         <option value="{{pastor.church.id}}">{{pastor.church.name}}</option>
                         {% for branch in branches %}
                             {% if branch.id != pastor.church.id %}
-                                <option value="{{branch.id}}">{{branch.name}}</option>
+                                <option value="{{branch.id}}">{{branch.name}}({{branch.section}})</option>
                             {% endif %}
                         {% endfor %}
                     </select>
