--- a/templates/districts/pastors/pastors.html
+++ b/templates/districts/pastors/pastors.html
@@ -6,14 +6,14 @@
 <div class="table-card">
     <div class="row py-3 px-2">
         <div class="col">
-            <h3 class="fw-bold">KAG Pastors</h3>
+            <h3 class="fw-bold">KAG Lead Pastors</h3>
         </div>
         <div class="col">
             <input type="text" class="form-control" placeholder="Search..." 
             id="searchInput" value="{{ search_query }}">
         </div>
         <div class="col">
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newPastorModal">New Pastor</button>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newPastorModal">New Lead Pastor</button>
           </div>
     </div>
     <!-- Table Toolbar --> 
