--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -101,10 +101,10 @@
                     <i class="fas fa-angle-down ms-auto small opacity-75"></i>
                 </a>
                 <ul class="collapse submenu">
-                    <li><a href="#" class="nav-link"><i class="fas fa-droplet me-2"></i> Baptism Requests</a></li>
-                    <li><a href="#" class="nav-link"><i class="fas fa-praying-hands me-2"></i> Prayer Requests</a></li>
-                    <li><a href="#" class="nav-link"><i class="fas fa-ring me-2"></i> Marriage Requests</a></li>
-                    <li><a href="#" class="nav-link"><i class="fas fa-cross me-2"></i> Burial Requests</a></li>
+                    <li><a href="{% url 'baptism-requests' %}" class="nav-link"><i class="fas fa-droplet me-2"></i> Baptism Requests</a></li>
+                    <li><a href="{% url 'prayer-requests' %}"" class="nav-link"><i class="fas fa-praying-hands me-2"></i> Prayer Requests</a></li>
+                    <li><a href="{% url 'marriage-requests' %}"" class="nav-link"><i class="fas fa-ring me-2"></i> Marriage Requests</a></li>
+                    <li><a href="{% url 'burial-requests' %}"" class="nav-link"><i class="fas fa-cross me-2"></i> Burial Requests</a></li>
                 </ul>
             </li>
 
